Changed quick-info email to a link and fixed About-image rounded corner issue on iphone

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -64,7 +64,7 @@
     }
 
     .footer__content {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 1.25rem;
         text-align: center;
     }
