--- a/src/sections/about/About.css
+++ b/src/sections/about/About.css
@@ -30,6 +30,11 @@
 }
 
 .about-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     display: block;
@@ -233,7 +238,7 @@
         flex: 0 0 auto;
         max-width: 400px;
         width: 100%;
-        margin: 0 auto;
+        margin: 0 0;
     }
 
     .about-text {
@@ -246,7 +251,6 @@
     /* .about-content {
         padding: 5rem 5% 3rem;
     } */
-
     .about-text h1 {
         font-size: 2.5rem;
     }
